Upgrades to ember 3.5

--- a/tests/dummy/app/application/template.hbs
+++ b/tests/dummy/app/application/template.hbs
@@ -1,62 +1,51 @@
 <div>
-  <label for='execution-key'>Execution Key</label>
+  <label for="execution-key">Execution Key</label>
   {{input
     value=executionKey
-    id='execution-key'
+    id="execution-key"
   }}
 </div>
 
 <div>
-  <label for='modifier-keys'>Modifier Keys</label>
+  <label for="modifier-keys">Modifier Keys</label>
   {{input
     value=modifierKeys
-    name='modifier-keys'
+    name="modifier-keys"
   }}
 </div>
 
 <div>
-  <label for='priority'>Priority</label>
+  <label for="priority">Priority</label>
   {{input
     value=priority
-    type='number'
-    name='priority'
+    type="number"
+    name="priority"
   }}
 </div>
 
 <div>
-  <label for='key-event'>Key Event</label>
-  <div
-    {{action (mut keyEvent) 'keydown'}}
-  >
-    Key Down {{if isKeydown ' - selected'}}
-  </div>
+  <label for="key-event">Key Event</label>
+  <button {{action (mut keyEvent) "keydown"}}>
+    Key Down {{if isKeydown " - selected"}}
+  </button>
 
-  <div
-    {{action (mut keyEvent) 'keyup'}}
-  >
-    Key Up {{if isKeydown '' ' - selected'}}
-  </div>
+  <button {{action (mut keyEvent) "keyup"}}>
+    Key Up {{if isKeydown "" " - selected"}}
+  </button>
 </div>
 
 <div>
-  <label for='group-name'>Group Name</label>
+  <label for="group-name">Group Name</label>
   {{input
     value=groupName
-    name='group-name'
+    name="group-name"
   }}
 </div>
 
 <div>
   <button
-    {{action 'addMacro' (hash
-        executionKey=executionKey
-        modifierKeys=modifierKeys
-        priority=priority
-        keyEvent=keyEvent
-        groupName=groupName
-      )
-    }}
     disabled={{hasNoExecutionKey}}
+    {{action "addMacro" (hash executionKey=executionKey modifierKeys=modifierKeys priority=priority keyEvent=keyEvent groupName=groupName)}}
   >
     Add Macro
   </button>
@@ -64,8 +53,8 @@
 
 <div>
   <button
-    {{action 'removeMacro' macro}}
     disabled={{hasNoMacro}}
+    {{action "removeMacro" macro}}
   >
     Remove Macro
   </button>
